cm4all-beng-proxy (0.8.2) unstable; urgency=low

  * cookie-client: verify the cookie path
  * python: use Twisted's logging library

 --

cm4all-beng-proxy (0.8.1) unstable; urgency=low

  * http-cache-memcached: delete entity records on POST

 -- Max Kellermann <mk@cm4all.com>  Tue, 18 May 2010 12:21:55 +0200

cm4all-beng-proxy (0.8) unstable; urgency=low

  * istream: added method as_fd() to convert istream to file descriptor
  * fork: support passing stdin istream fd to child process
  * http-cache: discard only matching entries on POST
  * istream-html-escape: escape single and double quote
  * rewrite-uri: escape the result with XML entities

 -- Max Kellermann <mk@cm4all.com>  Thu, 13 May 2010 12:34:46 +0200

cm4all-beng-proxy (0.7.37) unstable; urgency=low

  * *-client: implement a socket leak detector
  * handler: initialize response header without translation server

 -- Max Kellermann <mk@cm4all.com>  Tue, 18 May 2010 12:05:11 +0200

cm4all-beng-proxy (0.7.36) unstable; urgency=low

  * http-client: fixed NULL pointer dereference
  * handler, response: removed duplicate request body destruction calls

 -- Max Kellermann <mk@cm4all.com>  Tue, 11 May 2010 17:16:36 +0200

cm4all-beng-proxy (0.7.35) unstable; urgency=low

  * {http,fcgi,ajp}-request: close the request body on abort
  * handler: set fake translation response on malformed URI

 -- Max Kellermann <mk@cm4all.com>  Mon, 10 May 2010 11:22:23 +0200

cm4all-beng-proxy (0.7.34) unstable; urgency=low

  * translate: check the UNTRUSTED packet
  * translation: added packet UNTRUSTED_PREFIX

 -- Max Kellermann <mk@cm4all.com>  Fri, 30 Apr 2010 19:14:37 +0200

cm4all-beng-proxy (0.7.33) unstable; urgency=low

  * merged release 0.7.27.1
  * fcache: don't continue storing in background
  * fcgi-client: re-add event after some input data has been read

 -- Max Kellermann <mk@cm4all.com>  Fri, 30 Apr 2010 11:31:08 +0200

cm4all-beng-proxy (0.7.32) unstable; urgency=low
