@@ -2,6 +2,7 @@ cm4all-beng-proxy (0.8.2) unstable; urgency=low
 
   * cookie-client: verify the cookie path
   * python: use Twisted's logging library
+  * python: added a widget registry class
 
  --
 
